--- a/switch.html
+++ b/switch.html
@@ -6,6 +6,8 @@
 
 <center><h1>Switch</h1></center>
 
+<!--ID's content filled by Javascript-->
+
 <p id="switchDay"></p>
 
 <p id="switchMon"></p>
@@ -13,10 +15,6 @@
 <p id="hours"></p>
 
 <p id="week"></p>
-
-<p id="Milli"></p>
-
-<p id=""></p>
 
 <script src="switch.js"></script>
 </body>
